# evm-minter

./: Cargo.toml  README.md  evm_minter.did  makefile
evm_canisters/base_mainnet/: canister_ids.json  dfx.json  ledger_init.did  minter_init.did
evm_canisters/bsc_mainnet/: canister_ids.json  minter_init.did
evm_canisters/eth_mainnet/: canister_ids.json  dfx.json  ledger_init.did  minter_init.did
evm_canisters/pol_mainnet/: canister_ids.json  dfx.json  ledger_init.did  minter_init.did
evm_cansiters/base_mainnet/: index_init.did  ledger_init.did  minter_init.did
evm_cansiters/bsc_mainnet/: dfx.json  ledger_init.did  minter_init.did
evm_helper_contract/: foundry.toml  makefile
evm_helper_contract/broadcast/DeployBaseBridge.sol/8453/: run-latest.json
evm_helper_contract/broadcast/DeployBscBridge.sol/56/: run-1751314105.json  run-1751314247.json  run-latest.json
evm_helper_contract/broadcast/DeployEthBridge.sol/1/: run-1760075514992.json  run-1760076033829.json
evm_helper_contract/broadcast/DeployPolBridge.sol/137/: run-1760041691673.json  run-1760041809562.json  run-1760042045850.json  run-latest.json
evm_helper_contract/broadcast/Depositbase.s.sol/8453/: run-latest.json
evm_helper_contract/broadcast/Depositbnbtest.s.sol/56/: run-latest.json
evm_helper_contract/script/: DeployBaseBridge.sol  DeployBridge.sol  DeployBscBridge.sol  DeployEthBridge.sol  DeployPolBridge.sol  Depositbase.s.sol  Depositbnbtest.s.sol
evm_helper_contract/src/: Deposit.sol  IcpEvmBridge.sol  WrappedToken.sol
evm_helper_contract/src/abstract/: TokenManager.sol
evm_helper_contract/src/libraries/: StringUtils.sol
evm_helper_contract/test/: Deposit.t.sol  IcpEvmBridge.t.sol
evm_rpc_client/: Cargo.toml
evm_rpc_client/src/: evm_rpc_types.rs  lib.rs  tests.rs
evm_rpc_client/src/address/: tests.rs
evm_rpc_client/src/eth_types/: mod.rs  tests.rs
evm_rpc_client/src/native_http/: accounting.rs  constants.rs  http.rs  http_request.rs  mod.rs  util.rs
evm_rpc_client/src/native_http/candid_rpc/: cketh_conversion.rs  mod.rs
evm_rpc_client/src/native_http/eth_rpc/: mod.rs  tests.rs
evm_rpc_client/src/native_http/eth_rpc_error/: mod.rs  tests.rs
evm_rpc_client/src/native_http/json/: mod.rs  requests.rs  responses.rs  tests.rs
evm_rpc_client/src/numeric/: amount.rs  mod.rs
minter/: Cargo.toml
minter/proptest-regressions/numeric/: tests.txt
minter/src/: address.rs  deposit.rs  endpoints.rs  erc20.rs  icrc_21.rs  ledger_client.rs  lib.rs  lifecycle.rs  lsm_client.rs  main.rs  management.rs  memo.rs  rpc_declarations.rs  state.rs  test_fixtures.rs  tests.rs  tx.rs  tx_id.rs  withdraw.rs
minter/src/candid_types/: chain_data.rs  dex_orders.rs  events.rs  mod.rs  withdraw_erc20.rs  withdraw_native.rs  wrapped_icrc.rs
minter/src/checked_amount/: mod.rs
minter/src/contract_logs/: mod.rs  new_contract.rs  old_contract.rs  parser.rs  scraping.rs  test.rs  types.rs
minter/src/contract_logs/swap/: mod.rs  swap_logs.rs
minter/src/deposit_logs/: mod.rs  parser.rs  scraping.rs  test.rs
minter/src/dex_client/: mod.rs  runtime.rs  types.rs
minter/src/eth_types/: fee_hisotry_parser.rs  mod.rs  tests.rs
minter/src/guard/: tests.rs
minter/src/icrc_client/: mod.rs  runtime.rs
minter/src/lsm_client/: tests.rs
minter/src/memo/: tests.rs
minter/src/numeric/: mod.rs  tests.rs
minter/src/rpc_client/: mod.rs  providers.rs  tests.rs
minter/src/state/: audit.rs  balances.rs  event.rs  tests.rs
minter/src/state/transactions/: data.rs  mod.rs  tests.rs
minter/src/swap/: command_data.rs  mod.rs  quote.rs
minter/src/tests/: appic_helper_types.rs  dex_types.rs  ledger_arguments.rs  lock_release.rs  lsm_types.rs  minter_flow_tets.rs  pocket_ic_helpers.rs
minter/src/tests/swap/: evm_evm.rs  evm_icp.rs  helpers.rs  icp_evm.rs  mod.rs
minter/src/tx/: gas_fees.rs  gas_usd.rs
