[workspace]
members = ["evm_rpc_client", "minter"]
workspace.resolver = "2"

[workspace.dependencies]
ethnum = { version = "1.3.2", features = ["serde"] }
ic-cdk = "0.18.5"
ic-canister-log = "0.2.0"
ic-sha3="1.0.0"
candid = "0.10.20"

serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = { version = "^1.0.107" }
serde_with = "1.14.0"
serde_yaml = "0.9.33"

minicbor = { version = "0.19.1",features = ["derive","alloc"] }
minicbor-derive = "0.13.0"


phantom_newtype={ git = "https://github.com/dfinity/ic.git"}
hex = { version = "0.4.3", features = ["serde"] }
hex-literal="0.4.1"
num-bigint="0.4.6"
rlp="0.5.2"
num-traits="0.2.19"
thousands="0.2.0"
rust_decimal = {version = "1.37", features=["maths"]}
bytes = "1.7.1"


libsecp256k1 = { version = "0.7.2", default-features = false, features= ["hmac","static-context"]}


async-trait = "0.1.88"
futures = "0.3.31"


thiserror ="1.0.62"



[workspace.dev-dependencies]



