[package]
name = "evm_rpc_client"
version = "0.1.0"
edition = "2021"



[dependencies]
async-trait = "0.1.74"
candid = "0.10.6"
ic-canister-log = "0.2.0"
ic-cdk = "0.18.5"
serde = "1.0.23"
thiserror ="1.0.62"
url = "2.5.4"
num-bigint="0.4.6"
hex = { version = "0.4.3", features = ["serde"] }



[dev-dependencies]
mockall = "0.12.1"
tokio = { version = "1.38.0", features = ["full"] }
