[package]
name = "evm_rpc_client"
version = "0.1.0"
edition = "2021"



[dependencies]
ethnum = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }

candid = { workspace = true }
ic-cdk = { workspace = true }
ic-canister-log = { workspace = true }
ic-sha3={ workspace = true }

url = "2.5.4"

thiserror = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }


minicbor =  { workspace = true }
minicbor-derive = { workspace = true }

phantom_newtype= { workspace = true }
hex = { workspace = true }
hex-literal= { workspace = true }
num-bigint= { workspace = true }
rlp= { workspace = true }
num-traits= { workspace = true }
thousands= {workspace = true }
rust_decimal = {workspace = true }
bytes = {workspace = true }


libsecp256k1 = { workspace = true }

ethers-core = "2.0"




[dev-dependencies]
mockall = "0.12.1"
tokio = { version = "1.38.0", features = ["full"] }

proptest= "1.4.0"
assert_matches = "1.5.0"
ic-crypto-test-utils-reproducible-rng = { git = "https://github.com/dfinity/ic", rev = "release-2024-09-26_01-31-base" }
rand = "0.8"


