[package]
name = "evm_minter"
version = "0.1.0"
edition = "2021"



[dependencies]

evm_rpc_client = { path = "../evm_rpc_client" }

askama = { version = "0.12.1", features = ["serde-json"] }

ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }

ic-cbor = "2.6.0"
ic-cdk-timers = "0.12.2"
ic-stable-structures="0.6.5"
ic-crypto-sha2={ git = "https://github.com/dfinity/ic.git"}
ic-sha3={ workspace = true }
ic-management-canister-types = {version="0.3.1", default-features = false}
ic-utils-ensure = { git = "https://github.com/dfinity/ic.git" }
icrc-ledger-client = "0.1.3"
icrc-ledger-types = "0.1.10"

libsecp256k1 = { workspace = true }

phantom_newtype= { workspace = true }
hex = { workspace = true }
hex-literal= { workspace = true }
num-bigint= { workspace = true }
rlp= { workspace = true }
num-traits= { workspace = true }
thousands= {workspace = true }
rust_decimal = {workspace = true }
bytes = {workspace = true }
ethnum = {workspace = true}

serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }

strum = "0.26.3"
strum_macros = "0.26"


minicbor =  { workspace = true }
minicbor-derive = { workspace = true }


scopeguard = "1.1.0"

thiserror = { workspace = true }

time = { version = "0.3.36", features = ["formatting"] }

futures = { workspace = true }
async-trait = { workspace = true }


alloy = { version = "0.2", features = ["sol-types"] }
alloy-primitives = "0.2"


[dev-dependencies]
proptest= "1.4.0"
assert_matches = "1.5.0"
maplit="1"
flate2 = "1.0.34"
tokio = { version = "1.41.0", features = ["full"] }
rand = { version = "0.8.5", features = ["small_rng"] }
[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dependencies]
getrandom = { version = "0.2" }
hex = { version = "0.4.3", features = ["serde"] }
ethers-core="2.0.14"
ic-crypto-test-utils-reproducible-rng={ git = "https://github.com/dfinity/ic.git"}
pocket-ic = "9.0.0"
#
# ic-icrc1-index-ng = { git = "https://github.com/dfinity/ic.git"}
# ic-icrc1-ledger={ git = "https://github.com/dfinity/ic.git"}
